added search for open rooms
